--- a/Atividades-Presencial/HTML/atividade4.html
+++ b/Atividades-Presencial/HTML/atividade4.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste do Script matematica</title>
-    
+    <title>Atividade 4</title>
 </head>
 <body>
-    <script src="matematica.js"></script>
+    <script src="/Atividades-Presencial/JavaScript/atividade4.js"></script>
 </body>
 </html>
