--- a/codigos-testes/html/matematica.html
+++ b/codigos-testes/html/matematica.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste do Script matematica</title>
+    <title>Página básica de cálculo</title>
     
 </head>
 <body>
-    <script src="/codigos-testes/javascript/matematica.js"></script>
-    <h1>Ainda em desenvolvimento...</h1>
+    
 </body>
 </html>
