--- a/Atividades-Presencial/HTML/materia2/interface.html
+++ b/Atividades-Presencial/HTML/materia2/interface.html
@@ -11,19 +11,25 @@
     <title>Interface HTML</title>
 </head>
 <body>
+    <!-- header (cabeçalho)-->
     <header>
-        <h1 style="color:green; float: left; margin: 1vh">header</h1>
+        <h1>header</h1>
         <nav>
             <h1>&lt;nav&gt;</h1>
         </nav>
     </header>
+    <!-- main (conteúdo principal)-->
     <main>
-        <h1 style="float: left;">main</h1>
+        <h1>main</h1>
+        <section id="secao1">
+            
+        </section>
+
         <aside>
             <h1>aside</h1>
         </aside>
     </main>
-    
+
     <footer>
         <h1>footer</h1>
     </footer>
