--- a/Atividades-Presencial/HTML/materia2/interface.html
+++ b/Atividades-Presencial/HTML/materia2/interface.html
@@ -1,7 +1,3 @@
-<!--
-    Continue com a página mais tarde (Introdução a HTML - slide 57)
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,19 +11,46 @@
     <header>
         <h1>header</h1>
         <nav>
-            <h1>&lt;nav&gt;</h1>
+            <h2>nav</h2>
         </nav>
     </header>
     <!-- main (conteúdo principal)-->
     <main>
         <h1>main</h1>
+
         <section id="secao1">
-            
+            <h2>section</h2>
+
+            <article>
+                <h3>article</h3>
+            </article>
+
+            <article>
+                <h3>article</h3>
+            </article>
+
+            <article>
+                <h3>article</h3>
+            </article>
         </section>
 
         <aside>
-            <h1>aside</h1>
+            <h2>aside</h2>
+
+            <div>
+                <section>
+                    <h3>section</h3>
+                </section>
+
+                <section>
+                    <h3>section</h3>
+                </section>
+            </div>
         </aside>
+
+        <section id="secao2">
+            <h2>section</h2>
+        </section>
     </main>
 
     <footer>
